Set up basic tests

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   </script>
 
   <!-- include source files here... -->
-  <script src="nQueens.js"></script>
+  <script src="src/nQueensBit.js"></script>
+  <script src="src/nQueensHash.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/nQueens.js"></script>
